--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.23.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
@@ -32,6 +33,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
-    "html-webpack-plugin": "^2.20.0"
+    "html-webpack-plugin": "^2.20.0",
+    "style-loader": "^0.13.1"
   }
 }
