--- a/package.json
+++ b/package.json
@@ -33,6 +33,12 @@
     "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
+    "babel-eslint": "^6.0.4",
+    "eslint": "^2.12.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-jsx-a11y": "^1.4.2",
+    "eslint-plugin-react": "^5.1.1",
     "html-webpack-plugin": "^2.20.0",
     "style-loader": "^0.13.1"
   }
