--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,8 @@
       "react/prefer-es6-class": [1, "never"],
       "react/react-in-jsx-scope": 1,
       "no-use-before-define": [1, "nofunc"],
+      "no-param-reassign": ["error", { "props": false }],
+      "new-cap": ["error", { "capIsNew": false }],
       "jsx-quotes": 0
 
   },
