--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "CodeContainer",
   "version": "1.0.0",
-  "description": "",
+  "description": "Animate characters individually in a code-snippet",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ava",
     "start": "webpack-dev-server src/"
   },
   "repository": {
@@ -17,23 +17,33 @@
   "bugs": {
     "url": "https://github.com/Thr1ve/CodeContainer/issues"
   },
+  "ava": {
+    "require": "babel-register",
+    "babel": "inherit"
+  },
   "homepage": "https://github.com/Thr1ve/CodeContainer#readme",
   "dependencies": {
+    "@thr1ve/utils": "^1.3.1",
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
+    "immutable": "^3.8.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
+    "ava": "^0.15.2",
     "babel-eslint": "^6.0.4",
+    "babel-register": "^6.9.0",
     "eslint": "^2.12.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.8.1",
